# cnpj-data-pipeline

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  Server.Dockerfile  config.py  database.py  docker-compose.yml  downloader.py  env.example  export.py  initial.sql  justfile  lefthook.yml  llms.txt  main.py  parquet_writer.py  pickled.yml  processor.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  docker-publish.yml  pickled.yml  release.yml
api/: __init__.py  query.py  server.py
docs/: data-audit.md  data-schema.md  post-processing.md  upgrading.md
fixtures/pickled/: parquet-export.solution.patch
fixtures/pickled/parquet-export/: README.md
fixtures/pickled/parquet-export/tests/: verify-parquet-export.sh
notebooks/: sp_analysis.ipynb
recipes/: README.md
recipes/postgres/: cnae_secundaria_exploded.sql  cnaes_hierarquia.sql  data_quality_flags.sql  empresa_detalhe.sql  empresas_busca_nome.sql  empresas_busca_nome_counts.sql  estabelecimentos_clean.sql  reference_domain_labels.sql  reference_domains_enriched.sql  socios_clean.sql  socios_detalhe.sql  socios_quality_flags.sql
requirements/: base.txt
scripts/: data_quality_report.py
src/download_strategies/: base.py
tests/: __init__.py  conftest.py  test_config.py  test_data_quality_report.py  test_database.py  test_downloader.py  test_integration.py  test_main.py  test_parquet_writer.py  test_processor.py
tests/fixtures/: EMPRECSV.csv  ESTABELE.csv
